  introduced in 2.0)
#1354580 by bforchhammer, yched: Fixed unpublished referenced nodes not
  displayed to users that are allowed to see them (regression introduced in 2.0)
#1345816 by bforchhammer: Added support for the 'view_unpublished' module.
#1256280 by girishmuraly: Added query alterability in hook_field_prepare_view().

References 7.x-2.0
==================

Note for users upgrading from References 7.x-2.0-beta3:
There were a couple changes in the way 'References' views are handled
("referenceable nodes/users defined by a view"), which might require
double-checking those existing on your site:
- The 'label' (node title or user name) is no longer automatically added if not
included in the view. If some of your 'References' views currently do not
include it, you might want to add it explicitly, else it will no longer appear
in the widgets.
- The HTML generated by the view is no longer stripped out before being handed
to "checkboxes / radios" widgets, thus allowing advanced formatting. You might
want to check for Reference views having fields configured to display "as
links", since the (probably unwanted) <a> tags generated by Views are not
removed anymore.

Note for users upgrading from CCK D6:
- The Refernces project integrates with the content_migrate module present in
CCK 7.x-2.x-dev to allow the migration of field definitions and field values
from D6 nodereference and userreference fields. Field values are safely
migrated, and a best effort is made for the field definitions, but the settings
for widgets and formatters might need to be manually checked and adjusted after
the migration.
- The "referenceable nodes/users defined by a view" feature is now supported
through the dedicated 'References' views Display type, as opposed to using the
'default' display in D6. A temporary backward-compatibility layer is included
and the existing views should keep working as expected (if they have been